@@ -1,1 +1,1 @@
-Please see doc/authors.html
+Please see doc/api/html/index.html
