@@ -1,45 +1,0 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd"> 
-<html>
-<head> 
-<title>APBS</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-</head>
-
-<body bgcolor="#ffffff">
-
-
-<div>
-<h1 align="center">APBS: Adaptive Poisson-Boltzmann Solver</h1>
-<h3 align="center">version 0.2.6</h3>
-
-<hr>
-<center>
-<a href="http://www.biochem.wustl.edu/~baker/">Nathan A. Baker</a><br>
-Dept. of Biochemistry and Molecular Biophysics<br>
-Washington University in St. Louis <br>
-E-mail: <a
-href="mailto:baker@biochem.wustl.edu">baker@biochem.wustl.edu</a><br><br>
-<a href="authors.html">Additional contributing authors</a><br><br>
-<a href="license.html">Please view the license</a>
-</center>
-
-<hr>
-
-<center>
-Please see the <a href="api/html/index.html">User's guide</a> for information
-about the program and installation instructions.  Additional information can be
-obtained from the <a href="http://agave.wustl.edu/apbs/">APBS web
-site</a>.
-</center>
-
-<hr>
-
-<h2>Table of Contents</h2>
-<ul>
-<li> <a href="license.html">License</a>
-<li> <a href="authors.html">Authors</a>
-<li> <a href="api/html/index.html">User's and programmer's guides</a>
-</ul>
-
-</body>
-</html>
